# napari-em-assistant

./: .gitignore  README.md  pyproject.toml
src/napari_em_assistant/: __init__.py  napari.yaml
src/napari_em_assistant/tasks/: __init__.py
src/napari_em_assistant/tasks/crop_image/: README.md  __init__.py  batch.py  crop.py  widget.py
src/napari_em_assistant/tasks/enhance_local_contrast_clahe/: README.md  __init__.py  batch.py  gpu_clahe.py  imagej_clahe.py  io.py  opencv_clahe.py  widget.py
tests/tasks/: test_crop_image.py  test_enhance_local_contrast_clahe.py
