[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-em-assistant"
version = "0.2.0"
description = "Task-based EM image processing assistant for napari."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Wulin Teo" }
]
dependencies = [
    "numpy",
    "tifffile",
    "qtpy",
    "napari",
    "opencv-python-headless",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x",
]

[project.entry-points."napari.manifest"]
napari-em-assistant = "napari_em_assistant:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_em_assistant = ["napari.yaml", "tasks/enhance_local_contrast_clahe/README.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
