[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-em-assistant"
version = "0.2.3"
description = "Task-based EM image processing assistant for napari"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Wulin Teo" }
]
dependencies = [
    "numpy",
    "tifffile",
    "qtpy",
    "napari",
    "opencv-python-headless",
]
keywords = ["EM image anlaysis", "CLAHE"]
classifiers = [
  "Framework :: napari",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Image Processing",

]


[project.urls]
Homepage = "https://github.com/wulinteousa2-hash/napari-em-assistant"
Repository = "https://github.com/wulinteousa2-hash/napari-em-assistant"
Issues = "https://github.com/wulinteousa2-hash/napari-em-assistant/issues"

[project.entry-points."napari.manifest"]
napari-em-assistant = "napari_em_assistant:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_em_assistant = ["napari.yaml"]
